name:                petbox
version:             0.1.0.0
synopsis:            Project Euler Toolbox
-- description:
homepage:            https://github.com/Javran/petbox
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.c@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Petbox
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       mtl,
                       containers,
                       primes

  hs-source-dirs:      src
  default-language:    Haskell2010